# incremental_tasks

./: README.md  _version.py  generate_tasks  pyproject.toml
.github/workflows/: build.yml
incremental_tasks/: __init__.py  base.py  cli.py  language.py  periodic.py  symbolic.py  tasks.py
tests/: test_incremental.py  test_language.py  test_periodic.py  test_symbolic.py
