[tool.poetry]
name = "incremental_tasks"
version = "0.1.1"
description = ""
authors = ["hugcis <hmj.cisneros@gmail.com>"]

[tool.poetry.scripts]
generate_tasks_cli = "incremental_tasks:main"


[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
