[tool.poetry]
name = "incremental_tasks"
version = "0.1.2"
description = "A benchmark of progressively more difficult AI tasks to measure learning speed of ML systems "
authors = ["hugcis <hmj.cisneros@gmail.com>"]

[tool.poetry.scripts]
generate_tasks_cli = "incremental_tasks:main"


[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
